update vidoe frame

--- a/index.html
+++ b/index.html
@@ -361,9 +361,10 @@
           <figure class="image is-4by3 carousel-cell">
             <img src="img/Shuffleboard Game 3.png">
           </figure>
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/OoNKMp-sMic?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+          <figure class="video carousel-cell "
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/OoNKMp-sMic?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
               title="Shuffleboard Multiplayer game Using Unity" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
@@ -405,12 +406,13 @@
           <figure class="image is-4by3 carousel-cell">
             <img src="img/Stroop Color Game.png">
           </figure>
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/HvcnIQQrvi0?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
-              title="Stroop Color Game" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+          <figure class="video carousel-cell"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"></figure>
+          <iframe src="https://www.youtube.com/embed/HvcnIQQrvi0?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+            title="Stroop Color Game" frameborder="0"
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </figure>
         </div>
 
@@ -444,12 +446,14 @@
           <figure class="image is-4by3 carousel-cell">
             <img src="img/Information Runner Game.png">
           </figure>
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/0ZXDZD2iqE0?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
-              title="Information  Runner Game" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+          <figure class="video carousel-cell"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"></figure>
+          <iframe width="640" height="480"
+            src="https://www.youtube.com/embed/0ZXDZD2iqE0?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+            title="Information  Runner Game" frameborder="0"
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </figure>
         </div>
 
@@ -483,10 +487,11 @@
           <figure class="image is-4by3 carousel-cell">
             <img src="img/Super Business Woman.png">
           </figure>
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/2D8-JHI1jEs?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+          <figure class="video carousel-cell"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/2D8-JHI1jEs?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
               title="Super Business Woman prototype" frameborder="0"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
           </figure>
@@ -526,9 +531,10 @@
           <figure class="image is-4by3 carousel-cell">
             <img src="img/Hide and Find The Octopuses 3.png">
           </figure>
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/EFt1bdNWc-w?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+          <figure class="video carousel-cell"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/EFt1bdNWc-w?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
               title="Hide and Find The Octopuses" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
@@ -570,9 +576,10 @@
             <img src="img/Water Cup Challenge 2.png">
           </figure>
 
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/LZzx2CEb_tE?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+          <figure class="video carousel-cell"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/LZzx2CEb_tE?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
               title="Water Cup Challenge Gameplay" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
@@ -614,10 +621,11 @@
           <figure class="image is-4by3 carousel-cell">
             <img src="img/Just Hide 2.png">
           </figure>
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/FmUGt3cW9xU?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
-              title="Just Hide Game Play" frameborder="0"
+          <figure class="video carousel-cell"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/FmUGt3cW9xU?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" title="Just Hide Game Play"
+              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
           </figure>
@@ -652,10 +660,11 @@
           <figure class="image is-4by3 carousel-cell">
             <img src="img/Color Switch.png">
           </figure>
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/XC1QSrTzbMA?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
-              title="Color Switch Endless Game" frameborder="0"
+          <figure class="video carousel-cell"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/XC1QSrTzbMA?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" title="Color Switch Endless Game"
+              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
           </figure>
@@ -697,10 +706,11 @@
           <figure class="image is-4by3 carousel-cell">
             <img src="img/The Rising Bard 2.png">
           </figure>
-          <figure class="video carousel-cell">
-            <iframe width="640" height="480"
-              src="https://www.youtube.com/embed/5G3LTDHSiqU?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
-              title="The Rising Bard trailer" frameborder="0"
+          <figure class="video carousel-cell"
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/5G3LTDHSiqU?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" title="The Rising Bard trailer"
+              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
           </figure>
