--- a/index.html
+++ b/index.html
@@ -44,6 +44,105 @@
 
   <section class="section">
     <div class="container">
+      <h1 class="title">Projects</h1>
+      <hr />
+      <div class="tile is-ancestor">
+        <div class="tile is-vertical is-12">
+          <div class="tile">
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">Shuffleboard Game</p>
+                <figure class="image is-3by2">
+                  <img class="modal-trigger" data-target="project-1-modal" src="img/Shuffleboard Game.png">
+                </figure>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">Stroop Color Game</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="project-2-modal" src="img/Stroop Color Game.png">
+                </figure>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">Information Runner Game</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="project-3-modal" src="img/Information Runner Game.png">
+                </figure>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tile is-ancestor">
+        <div class="tile is-vertical is-12">
+          <div class="tile">
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">Super Business Woman</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="project-4-modal" src="img/Super Business Woman.png">
+                </figure>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">Hide and Find The Octopuses</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="project-5-modal" src="img/Hide and Find The Octopuses.png">
+                </figure>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">Water Cup Challenge</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="project-6-modal" src="img/Water Cup Challenge.png">
+                </figure>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="tile is-ancestor">
+        <div class="tile is-vertical is-12">
+          <div class="tile">
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">Just Hide</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="project-7-modal" src="img/Just Hide.png">
+                </figure>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">Color Switch</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="project-8-modal" src="img/Color Switch.png">
+                </figure>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child notification">
+                <p class="title">The Rising Bard</p>
+                <figure class="image is-4by3">
+                  <img class="modal-trigger" data-target="project-9-modal" src="img/The Rising Bard.png">
+                </figure>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="section">
+    <div class="container">
       <h1 class="title">Experience</h1>
       <hr />
       <div class="card">
@@ -150,103 +249,7 @@
     </div>
   </section>
 
-  <section class="section">
-    <div class="container">
-      <h1 class="title">Projects</h1>
-      <hr />
-      <div class="tile is-ancestor">
-        <div class="tile is-vertical is-12">
-          <div class="tile">
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">Shuffleboard Game</p>
-                <figure class="image is-3by2">
-                  <img class="modal-trigger" data-target="project-1-modal" src="img/Shuffleboard Game.png">
-                </figure>
-              </article>
-            </div>
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">Stroop Color Game</p>
-                <figure class="image is-4by3">
-                  <img class="modal-trigger" data-target="project-2-modal" src="img/Stroop Color Game.png">
-                </figure>
-              </article>
-            </div>
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">Information Runner Game</p>
-                <figure class="image is-4by3">
-                  <img class="modal-trigger" data-target="project-3-modal" src="img/Information Runner Game.png">
-                </figure>
-              </article>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="tile is-ancestor">
-        <div class="tile is-vertical is-12">
-          <div class="tile">
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">Super Business Woman</p>
-                <figure class="image is-4by3">
-                  <img class="modal-trigger" data-target="project-4-modal" src="img/Super Business Woman.png">
-                </figure>
-              </article>
-            </div>
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">Hide and Find The Octopuses</p>
-                <figure class="image is-4by3">
-                  <img class="modal-trigger" data-target="project-5-modal" src="img/Hide and Find The Octopuses.png">
-                </figure>
-              </article>
-            </div>
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">Water Cup Challenge</p>
-                <figure class="image is-4by3">
-                  <img class="modal-trigger" data-target="project-6-modal" src="img/Water Cup Challenge.png">
-                </figure>
-              </article>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="tile is-ancestor">
-        <div class="tile is-vertical is-12">
-          <div class="tile">
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">Just Hide</p>
-                <figure class="image is-4by3">
-                  <img class="modal-trigger" data-target="project-7-modal" src="img/Just Hide.png">
-                </figure>
-              </article>
-            </div>
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">Color Switch</p>
-                <figure class="image is-4by3">
-                  <img class="modal-trigger" data-target="project-8-modal" src="img/Color Switch.png">
-                </figure>
-              </article>
-            </div>
-            <div class="tile is-parent">
-              <article class="tile is-child notification">
-                <p class="title">The Rising Bard</p>
-                <figure class="image is-4by3">
-                  <img class="modal-trigger" data-target="project-9-modal" src="img/The Rising Bard.png">
-                </figure>
-              </article>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
 
 
@@ -398,12 +401,12 @@
             <img src="img/Stroop Color Game.png">
           </figure>
           <figure class="video carousel-cell"
-            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"></figure>
-          <iframe src="https://www.youtube.com/embed/HvcnIQQrvi0?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
-            title="Stroop Color Game" frameborder="0"
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/HvcnIQQrvi0?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+              title="Stroop Color Game" frameborder="0"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
           </figure>
         </div>
 
@@ -438,13 +441,12 @@
             <img src="img/Information Runner Game.png">
           </figure>
           <figure class="video carousel-cell"
-            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;"></figure>
-          <iframe width="640" height="480"
-            src="https://www.youtube.com/embed/0ZXDZD2iqE0?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
-            title="Information  Runner Game" frameborder="0"
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+            style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+            <iframe src="https://www.youtube.com/embed/0ZXDZD2iqE0?list=PLJZJ6WMAnJ9KAgdgQyz7Z6SYNpe5ka_2g"
+              title="Information  Runner Game" frameborder="0"
+              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
           </figure>
         </div>
 
